src/pages/styles.css
.website{ 
	width: 65vw;
	height: 600px;
}
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #000; 
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #ea4141;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #e36464;
}
.codebase{ 
	width: 35vw;
}
@media only screen and (max-width: 800px) {
  .website{ 
	  width: 90vw;
	  height: 600px;
  }
  .codebase{ 
    width: 65vw;
  }
}

.graphic{ 
	width: 33vw;
}

@media only screen and (max-width: 800px) {
    .graphic{ 
	width: 70%;
	}
}

.projects {
  text-align: center;
  display: grid;
	
}

.navbar {
    width: 100%;
    text-align: center;
    z-index: 20;
}

.navlist-wrapper {
    width: 100%;
     text-align: center;
      margin: 0 auto;
      background-color: #ea4141;
      	 box-shadow: 0 1px 2px rgba(0,0,0,.12), 0 1px 2px rgba(0,0,0,.24);
}

@media only screen and (max-width:  1024px) and (orientation: portrait) {
    .navlist-wrapper {
        width: 100%;
    }
}


.navlist-wrapper li{
    display: inline-block;
     margin: 3px 1vw;
}


.navbarItem span{
  transition: all .3s ease-out;
  -moz-transition: all .3s ease-out;
  -webkit-transition: all .3s ease-out;
  -o-transition: all .3s ease-out;
  color: #fff;
}

.navbarItem.active {
  border-bottom: 3px solid white;
}
.navbarItem:hover span{

  color:  #000;
}

.navbarItem:hover .active {
  border-bottom: 3px solid black;
}
@media only screen and (min-width: 2500px) {
  .navlist-wrapper {
    height: 70px;
  }
  .navbarItem{
    font-size: 3em;
    height: 50px;
  }
  .navlist-wrapper li{
     margin: 15px 1vw;
  }
  .navbarItem:hover .active {
    border-bottom: 9px solid black;
  }
  .navbarItem.active {
    border-bottom: 9px solid white;
  }
}

@media only screen and (min-width: 2500px) {
	#experience-section p {
		font-size: 3em;
	}
}


a.lightbox img {
      	 box-shadow: 0 1px 2px rgba(0,0,0,.12), 0 1px 2px rgba(0,0,0,.24);
  }
  
  /* Styles the lightbox, removes it from sight and adds the fade-in transition */
  
  .lightbox-target {
    z-index:100;
  position: fixed;
  top: -100%;
  left: 0px;
  width: 100%;
  background: rgba(0,0,0,.7);
  width: 100%;
  opacity: 0;
  -webkit-transition: opacity .5s ease-in-out;
  -moz-transition: opacity .5s ease-in-out;
  -o-transition: opacity .5s ease-in-out;
  transition: opacity .5s ease-in-out;
  overflow: hidden;
  }
  
  /* Styles the lightbox image, centers it vertically and horizontally, adds the zoom-in transition and makes it responsive using a combination of margin and absolute positioning */
  
  .lightbox-target img {
  margin: auto;
  position: absolute;
  top: 0;
  left:0;
  right:0;
  bottom: 0;
  max-height: 0%;
  max-width: 0%;
  box-shadow: 0px 0px 8px rgba(0,0,0,.3);
  box-sizing: border-box;
  -webkit-transition: .5s ease-in-out;
  -moz-transition: .5s ease-in-out;
  -o-transition: .5s ease-in-out;
  transition: .5s ease-in-out;
  }
  
  /* Styles the close link, adds the slide down transition */
  
  a.lightbox-close {
  display: block;
  width:40px;
  height:40px;
  box-sizing: border-box;
  background: white;
  color: black;
  text-decoration: none;
  position: absolute;
  top: -80px;
  right: 18px;
  -webkit-transition: .5s ease-in-out;
  -moz-transition: .5s ease-in-out;
  -o-transition: .5s ease-in-out;
  transition: .5s ease-in-out;
  }
  
  /* Provides part of the "X" to eliminate an image from the close link */
  
  a.lightbox-close:before {
  content: "";
  display: block;
  height: 30px;
  width: 1px;
  background: black;
  position: absolute;
  left: 20px;
  top:5px;
  -webkit-transform:rotate(45deg);
  -moz-transform:rotate(45deg);
  -o-transform:rotate(45deg);
  transform:rotate(45deg);
  }
  
  /* Provides part of the "X" to eliminate an image from the close link */
  
  a.lightbox-close:after {
  content: "";
  display: block;
  height: 30px;
  width: 1px;
  background: black;
  position: absolute;
  left: 20px;
  top:5px;
  -webkit-transform:rotate(-45deg);
  -moz-transform:rotate(-45deg);
  -o-transform:rotate(-45deg);
  transform:rotate(-45deg);
  }
  
  /* Uses the :target pseudo-class to perform the animations upon clicking the .lightbox-target anchor */
  
  .lightbox-target:target {
  opacity: 1;
  top: 0;
  bottom: 0;
  }
  
  .lightbox-target:target img {
  max-height: 100%;
  max-width: 100%;
  }
  
  .lightbox-target:target a.lightbox-close {
  top: 0px;
  }
  
  .skill-item {
    background-color: #eeeeee;
    border-radius: 4px;
    margin-left: .25rem;
    margin-right: .25rem;
    padding-left: .55rem;
    padding-right: .55rem;
    margin-bottom: .5rem;
    align-items: center;
    color: #4a4a4a;
    font-size: .75rem;
    display: inline-flex;
    height: 1.55em;
    justify-content: center;
    line-height: 1.5;
  }

  .desc p{
    font-size: 0.9em;
  }

  @media only screen and (max-width: 1024px) {
    .desc p{
      font-size: 0.8em;
    }
  }

  .about-profile{
    border-radius: 100%;
    width: 100px;
  }


  .skills-wrapper {
    font-size: 0.9em;
    margin-top: 10vh;
  }
  .skills-wrapper span{
    border-radius: 4px;
  }

  .footer-text{
    font-size: 1em;
  }

  @media only screen and (max-width: 6px) {
    .skills-wrapper {
      font-size: 0.8em;
    }
  }

  @media only screen and (min-width: 2500px) {
    .desc p{
      font-size: 3em;
      line-height: 1.5em;
    }
    #about-section h4{
      font-size: 3.5em;
      line-height: 1.5em;
    }

    .footer-text{
      font-size: 1.2em;
      line-height: 1.5em;
    }

    #about-section h6{
      font-size: 2.5em;
      line-height: 1.5em;
    }

    #about-section .about-image{
      width: 40vw;
    }

    .about-profile{
      width: 300px;
    }

    .skills-wrapper {
      font-size: 2.5em;
      line-height: 1.2em;
      margin: 0 20vw;
      margin-top: 10vh;
    }
    .skills-wrapper h4{
      font-size: 1em;
      line-height: 1.5em;
    }
    .skills-wrapper span{
      font-size: 0.8em;
      border-radius: 10px;
      margin: 0 10px;
    }

    .skills-wrapper h5{
      font-size: 0.9em;
      border-radius: 10px;
    }

    #projects-section h1{
      font-size: 3em;
    }
    #projects-section h2{
      font-size: 3em;
    }
    #projects-section h3{
      font-size: 3em;
    }
    #projects-section h4{
      font-size: 3em;
    }
    #projects-section h5{
      font-size: 3em;
    }
    #projects-section h6{
      font-size: 3em;
    }
    #projects-section p{
      font-size: 3em;
    }

    .website {
      height: 1300px;
    }
  }

